# lierre

./: .editorconfig  .gitignore  MANIFEST.in  README.md  TODO.md  setup.cfg  setup.py  tox.ini
data/: lierre.desktop
docs/: index.rst  plugins.rst  refresh.rst
docs/example_conf_gmail/: README.md  lierre_config  mbsyncrc  msmtprc
lierre/: __init__.py  __main__.py  app.py  change_watcher.py  config.py  credentials.py  fetching.py  plugin_manager.py  sending.py
lierre/builtins/addressbook/: base.py  khard.py
lierre/builtins/fetchers/: base.py  command.py  mbsync.py  mbsync.ui
lierre/builtins/filters/: base.py  command.py  thread_assign_dir.py  trashing.py
lierre/builtins/misc/: imapidle.py  periodic_refresh.py  tag_colors.py
lierre/builtins/senders/: base.py  msmtp.py  msmtp.ui  sendmail.py
lierre/mailutils/: parsequote.py
lierre/ui/: Makefile  collapsed_message.ui  compose.py  compose.ui  error_logs.py  error_logs.ui  folders_widget.py  folders_widget.ui  messagestreeview.py  messagesview.py  models.py  options_conf.py  options_conf.ui  plain_message.ui  plugins_conf.py  plugins_conf.ui  recipients_editor.py  tabwidget.py  tag_chooser.py  tag_chooser.ui  tag_colors.ui  tag_editor.py  tag_editor.ui  tagslistview.py  thread_widget.py  thread_widget.ui  thread_window.ui  threads_widget.py  threads_widget.ui  threads_window.ui  threadslist.py  threadview.py  ui_loader.py  webview.py  window.py  window.ui
lierre/ui/views/: messagesview.py
lierre/utils/: addresses.py  box_ops.py  date.py  db_ops.py  maildir_ops.py  pexpect.py
qnmail/: TODO.md  __main__.py  app.py
qnmail/ui/: plain_message.ui  threads_window.ui  threadslist.py  threadview.py  webview.py  window.py
tests/: test_change_watcher.py  test_config.py  test_ui_messagesview.py  test_utils_maildir_ops.py
