[metadata]
name = lierre
version = 0.1.0

url = https://gitlab.com/hydrargyrum/lierre

#install_requires=[],

description = Graphical and tag-based email client
long_description = file: README.md

author = Hg
author_email = dev@indigo.re

maintainer = Hg
maintainer_email = dev@indigo.re

install_requires =
    pyxdg

#packages=[],
#include_package_data=True,
#scripts=['mutt-notmuch-py'],


classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Email :: Email Clients (MUA)

[options]
packages = find:

