[metadata]
name = lierre
version = attr: lierre.__version__

url = https://gitlab.com/hydrargyrum/lierre

#install_requires=[],

description = Graphical and tag-based email client
long_description = file: README.md

author = Hg
author_email = dev@indigo.re

maintainer = Hg
maintainer_email = dev@indigo.re

#packages=[],
include_package_data = True
#scripts=['mutt-notmuch-py'],


classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Email :: Email Clients (MUA)

[options]
python_requires = >= 3.6
# "import email.message" is since 3.6

packages = find:

install_requires =
    pyxdg
    stevedore
    ruamel.yaml
    pexpect
    PyQt5
    PyQtWebEngine

[options.data_files]
share/applications =
    data/lierre.desktop

share/icons/hicolor/256x256/apps =
    data/lierre.png

[options.entry_points]
gui_scripts =
    lierre = lierre.__main__:main

lierre.plugins.senders =
    msmtp = lierre.builtins.senders.msmtp:MSmtpPlugin

lierre.plugins.fetchers =
    command = lierre.builtins.fetchers.command:CommandPlugin
    mbsync = lierre.builtins.fetchers.mbsync:MbsyncPlugin

lierre.plugins.filters =
    command = lierre.builtins.filters.command:CommandPlugin
    thread_assign_dir = lierre.builtins.filters.thread_assign_dir:ThreadToDirPlugin
    trashing = lierre.builtins.filters.trashing:TrashingPlugin

lierre.plugins.addressbook =
    khard = lierre.builtins.addressbook.khard:KhardPlugin

lierre.plugins.misc =
    periodic_refresh = lierre.builtins.misc.periodic_refresh:PeriodicRefreshPlugin
    imapidle = lierre.builtins.misc.imapidle:IdlePlugin
    tag_colors = lierre.builtins.misc.tag_colors:ColorsPlugin

[options.extras_require]
imapidle = imaplib2
html2text = html2text
khard = khard
